<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:text="@string/acceleration_test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/go_to_accel_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_acceleration_data"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="195dp" />

        <Button
            android:id="@+id/go_to_hype_meter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_hype_meter"
            tools:layout_editor_absoluteX="116dp"
            tools:layout_editor_absoluteY="348dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>