<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HypeMeter">

    <LinearLayout
        android:id="@+id/hype_meter_layout"
        android:layout_width="368dp"
        android:layout_height="306dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032">

        <TextView
            android:id="@+id/hype_detection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_hype"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hypeOrNot"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="[will show data]"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/hype_level"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/shows_data"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="163dp"
                tools:layout_editor_absoluteY="226dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/HypeToAccelerometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_acclerometer_data"
            tools:layout_editor_absoluteX="279dp"
            tools:layout_editor_absoluteY="287dp" />

        <Button
            android:id="@+id/hype_meter_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home" />
    </LinearLayout>

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="229dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="330dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</android.support.constraint.ConstraintLayout>